--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   /* text-align: center; */
 }
 
+@media (max-width: 768px) {
+  #root {
+    padding: 0rem;
+  }
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
